Project preview: Fixed behaviour of visible elemnts

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -202,6 +202,10 @@ article.project {
 }
 
 article.project.visible {
+	margin-top: 0px;
+	margin-bottom: 1em;
+	padding-top: 0px;
+	padding-bottom: 0px;
 	visibility: visible;
 	opacity: 1;
 	max-height: 400px;
